JSON viewer dark mode button colour correction Diff checker info popup brought

--- a/JSONViewer/styles.css
+++ b/JSONViewer/styles.css
@@ -56,7 +56,7 @@ body.dark-mode .sim-status {
 .mode-label {
     margin-left: 10px;
     font-weight: 600;
-    color: #000;
+
     transition: color 0.3s;
 }
 
@@ -188,7 +188,7 @@ input:checked + .slider:before {
 
     .out-of-order {
         width: 40px;
-        height: auto;
+        height: 40px;
     }
 }
 
